[package]
name = "a-star-search"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fluvio-wasm-timer = "0.2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "console",
  "HtmlParagraphElement",
  "Text",
]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[profile.release]
opt-level = "s"
